--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/BJSimLib/v15/Server/sqlite3/db.lock
+/.vs/BJSimLib/v15/Server/sqlite3/storage.ide
+/.vs/BJSimLib/v15/Server/sqlite3/storage.ide-shm
+/.vs/BJSimLib/v15/Server/sqlite3/storage.ide-wal
+/.vs/BJSimLib/v15/.suo
